--- a/public/sobrenos.html
+++ b/public/sobrenos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurante Sabor Caseiro</title>
+    <title>Sobre Nós - Restaurante Sabor Caseiro</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
@@ -32,13 +32,15 @@
       </div>
     </header>
 
-    <section class="hero">
-      <div class="hero-overlay"></div>
-      <div class="hero-text">
-        <h2>O melhor sabor da cidade</h2>
-        <p>Comida feita com amor para você e sua família.</p>
-      </div>
-    </section>
+    <main>
+      <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p class="about">
+          Somos um restaurante familiar com mais de 10 anos de experiência,
+          trazendo o verdadeiro sabor da comida caseira para você e sua família.
+        </p>
+      </section>
+    </main>
 
     <footer>
       <p>© 2026 Restaurante Sabor Caseiro - Todos os direitos reservados</p>
