--- a/public/contato.html
+++ b/public/contato.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurante Sabor Caseiro</title>
+    <title>Contato - Restaurante Sabor Caseiro</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
@@ -32,13 +32,16 @@
       </div>
     </header>
 
-    <section class="hero">
-      <div class="hero-overlay"></div>
-      <div class="hero-text">
-        <h2>O melhor sabor da cidade</h2>
-        <p>Comida feita com amor para você e sua família.</p>
-      </div>
-    </section>
+    <main>
+      <section id="contato">
+        <h2>Contato</h2>
+        <div class="contato-info">
+          <p>📍 Rua Central, 123 - Centro</p>
+          <p>📞 Telefone: (11) 99999-9999</p>
+          <p>⏰ Seg a Dom: 11h às 22h</p>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <p>© 2026 Restaurante Sabor Caseiro - Todos os direitos reservados</p>
