--- a/public/cardapio.html
+++ b/public/cardapio.html
@@ -9,14 +9,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.14.1/gsap.min.js"
-      defer
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.14.1/ScrollTrigger.min.js"
-      defer
-    ></script>
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -28,6 +20,7 @@
           <a href="cardapio.html">Cardápio</a>
           <a href="sobre.html">Sobre</a>
           <a href="contato.html">Contato</a>
+          <a href="carrinho.html">Carrinho (<span id="cart-count">0</span>)</a>
         </nav>
       </div>
     </header>
@@ -35,26 +28,37 @@
     <main>
       <section id="menu">
         <h2>Nosso Cardápio</h2>
-        <div class="slider-container">
-          <button class="prev">◀</button>
-          <div class="slider" id="sliderProdutos">
-            <div class="card">
-              <h3>Feijoada Completa</h3>
-              <p>Feijão preto, carnes selecionadas e acompanhamentos.</p>
-              <span class="price">R$ 35,00</span>
-            </div>
-            <div class="card">
-              <h3>Strogonoff de Frango</h3>
-              <p>Frango ao molho cremoso com arroz e batata palha.</p>
-              <span class="price">R$ 28,00</span>
-            </div>
-            <div class="card">
-              <h3>Lasanha à Bolonhesa</h3>
-              <p>Massa fresca, molho caseiro e queijo derretido.</p>
-              <span class="price">R$ 32,00</span>
-            </div>
+        <div class="menu-grid">
+          <div class="card" data-nome="Feijoada Completa" data-preco="35">
+            <img
+              src="https://images.unsplash.com/photo-1604908177527-3e07f403b416"
+              alt="Feijoada"
+            />
+            <h3>Feijoada Completa</h3>
+            <p>Feijão preto, carnes selecionadas e acompanhamentos.</p>
+            <span class="price">R$ 35,00</span>
+            <button class="add-cart">Adicionar ao carrinho</button>
           </div>
-          <button class="next">▶</button>
+          <div class="card" data-nome="Strogonoff de Frango" data-preco="28">
+            <img
+              src="https://images.unsplash.com/photo-1627308595229-7830a5c91f9f"
+              alt="Strogonoff"
+            />
+            <h3>Strogonoff de Frango</h3>
+            <p>Frango ao molho cremoso com arroz e batata palha.</p>
+            <span class="price">R$ 28,00</span>
+            <button class="add-cart">Adicionar ao carrinho</button>
+          </div>
+          <div class="card" data-nome="Lasanha à Bolonhesa" data-preco="32">
+            <img
+              src="https://images.unsplash.com/photo-1604908177526-2d019e5f1d4d"
+              alt="Lasanha"
+            />
+            <h3>Lasanha à Bolonhesa</h3>
+            <p>Massa fresca, molho caseiro e queijo derretido.</p>
+            <span class="price">R$ 32,00</span>
+            <button class="add-cart">Adicionar ao carrinho</button>
+          </div>
         </div>
       </section>
     </main>
