--- a/public/cardapio.html
+++ b/public/cardapio.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cardápio - Restaurante Sabor Caseiro</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <header id="header">
+    <header>
       <div class="container-header">
         <h1>Restaurante Sabor Caseiro</h1>
         <nav>
-          <a href="index.html">Início</a>
+          <a href="index.html">Home</a>
           <a href="cardapio.html">Cardápio</a>
           <a href="sobre.html">Sobre</a>
           <a href="contato.html">Contato</a>
@@ -26,26 +22,24 @@
     </header>
 
     <main>
-      <section id="menu">
+      <section id="cardapio">
         <h2>Nosso Cardápio</h2>
         <div class="menu-grid">
           <div class="card" data-nome="Feijoada Completa" data-preco="35">
             <img
-              src="https://images.unsplash.com/photo-1604908177527-3e07f403b416"
+              src="https://images.unsplash.com/photo-1555396273-367ea4eb4db5"
               alt="Feijoada"
             />
             <h3>Feijoada Completa</h3>
-            <p>Feijão preto, carnes selecionadas e acompanhamentos.</p>
             <span class="price">R$ 35,00</span>
             <button class="add-cart">Adicionar ao carrinho</button>
           </div>
           <div class="card" data-nome="Strogonoff de Frango" data-preco="28">
             <img
-              src="https://images.unsplash.com/photo-1627308595229-7830a5c91f9f"
+              src="https://images.unsplash.com/photo-1604908177527-3e07f403b416"
               alt="Strogonoff"
             />
             <h3>Strogonoff de Frango</h3>
-            <p>Frango ao molho cremoso com arroz e batata palha.</p>
             <span class="price">R$ 28,00</span>
             <button class="add-cart">Adicionar ao carrinho</button>
           </div>
@@ -55,7 +49,6 @@
               alt="Lasanha"
             />
             <h3>Lasanha à Bolonhesa</h3>
-            <p>Massa fresca, molho caseiro e queijo derretido.</p>
             <span class="price">R$ 32,00</span>
             <button class="add-cart">Adicionar ao carrinho</button>
           </div>
