--- a/public/carrinho.html
+++ b/public/carrinho.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrinho - Restaurante Sabor Caseiro</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
     <script src="cart.js" defer></script>
   </head>
   <body>
-    <header id="header">
+    <header>
       <div class="container-header">
         <h1>Restaurante Sabor Caseiro</h1>
         <nav>
-          <a href="index.html">Início</a>
+          <a href="index.html">Home</a>
           <a href="cardapio.html">Cardápio</a>
           <a href="sobre.html">Sobre</a>
           <a href="contato.html">Contato</a>
