--- a/public/contato.html
+++ b/public/contato.html
@@ -4,30 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contato - Restaurante Sabor Caseiro</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.14.1/gsap.min.js"
-      defer
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.14.1/ScrollTrigger.min.js"
-      defer
-    ></script>
-    <script src="script.js" defer></script>
   </head>
   <body>
-    <header id="header">
+    <header>
       <div class="container-header">
         <h1>Restaurante Sabor Caseiro</h1>
         <nav>
-          <a href="index.html">Início</a>
+          <a href="index.html">Home</a>
           <a href="cardapio.html">Cardápio</a>
           <a href="sobre.html">Sobre</a>
           <a href="contato.html">Contato</a>
+          <a href="carrinho.html">Carrinho</a>
         </nav>
       </div>
     </header>
