--- a/public/cardapio.html
+++ b/public/cardapio.html
@@ -36,7 +36,8 @@
           </div>
           <div class="card" data-nome="Strogonoff de Frango" data-preco="28">
             <img
-              src="https://images.unsplash.com/photo-1604908177527-3e07f403b416"
+              src="https://images.unsplash.com/photo-1555396273-367ea4eb4db5?auto=format&fit=crop&w=500&q=60
+"
               alt="Strogonoff"
             />
             <h3>Strogonoff de Frango</h3>
