--- a/public/sobre.html
+++ b/public/sobre.html
@@ -3,31 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre Nós - Restaurante Sabor Caseiro</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+    <title>Sobre - Restaurante Sabor Caseiro</title>
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.14.1/gsap.min.js"
-      defer
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.14.1/ScrollTrigger.min.js"
-      defer
-    ></script>
-    <script src="script.js" defer></script>
   </head>
   <body>
-    <header id="header">
+    <header>
       <div class="container-header">
         <h1>Restaurante Sabor Caseiro</h1>
         <nav>
-          <a href="index.html">Início</a>
+          <a href="index.html">Home</a>
           <a href="cardapio.html">Cardápio</a>
           <a href="sobre.html">Sobre</a>
           <a href="contato.html">Contato</a>
+          <a href="carrinho.html">Carrinho</a>
         </nav>
       </div>
     </header>
@@ -39,6 +27,11 @@
           Somos um restaurante familiar com mais de 10 anos de experiência,
           trazendo o verdadeiro sabor da comida caseira para você e sua família.
         </p>
+        <img
+          src="https://images.unsplash.com/photo-1604908177527-3e07f403b416?auto=format&fit=crop&w=800&q=60"
+          alt="Restaurante"
+          style="width: 100%; border-radius: 8px; margin-top: 20px"
+        />
       </section>
     </main>
 
