--- a/public/sobre.html
+++ b/public/sobre.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="container-header">
         <h1>Restaurante Sabor Caseiro</h1>
         <nav>
@@ -23,7 +23,7 @@
     <main>
       <section id="sobre">
         <h2>Sobre Nós</h2>
-        <p class="about">
+        <p>
           Somos um restaurante familiar com mais de 10 anos de experiência,
           trazendo o verdadeiro sabor da comida caseira para você e sua família.
         </p>
