--- a/public/carrinho.html
+++ b/public/carrinho.html
@@ -37,14 +37,19 @@
           <h3>Total: R$ <span id="total">0</span></h3>
           <button id="btnCheckout">Finalizar Pedido</button>
         </div>
-
-        <!-- Container do QR code -->
-        <div
-          id="qrCodeContainer"
-          style="text-align: center; margin-top: 20px"
-        ></div>
       </section>
     </main>
+
+    <!-- Modal do QR code -->
+    <div id="qrModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Pagamento via QR Code</h2>
+        <div id="resumoPedido"></div>
+        <div id="qrCodeContainer" style="margin-top: 20px"></div>
+        <button id="btnPagamentoConcluido">Pagamento concluído</button>
+      </div>
+    </div>
 
     <footer>
       <p>© 2026 Restaurante Sabor Caseiro - Todos os direitos reservados</p>
