--- a/public/cardapio.html
+++ b/public/cardapio.html
@@ -2,18 +2,19 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <title>Cardápio | Restaurante Sabor Caseiro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cardápio - Restaurante Sabor Caseiro</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.14.1/gsap.min.js"></script>
     <script src="script.js" defer></script>
   </head>
   <body>
-    <header id="header">
+    <header>
       <div class="container-header">
-        <h1>Restaurante Sabor Caseiro</h1>
+        <h1>Sabor Caseiro</h1>
         <nav>
           <a href="index.html">Home</a>
-          <a href="cardapio.html">Cardápio</a>
+          <a href="cardapio.html" class="active">Cardápio</a>
           <a href="sobre.html">Sobre</a>
           <a href="contato.html">Contato</a>
           <a href="carrinho.html">Carrinho (<span id="cart-count">0</span>)</a>
@@ -21,17 +22,56 @@
       </div>
     </header>
 
-    <main>
-      <section id="cardapio">
-        <h2>Nosso Cardápio</h2>
-        <div class="menu-grid" id="listaProdutos">
-          <!-- Produtos serão carregados pelo script -->
+    <main class="container">
+      <h2 class="titulo-pagina">Nosso Cardápio</h2>
+
+      <section class="grid-cardapio">
+        <div class="produto">
+          <img
+            src="https://images.unsplash.com/photo-1555396273-367ea4eb4db5"
+            alt="Feijoada"
+          />
+          <h3>Feijoada Completa</h3>
+          <p>Tradicional feijoada brasileira</p>
+          <span>R$ 35,00</span>
+          <button onclick="adicionarCarrinho(1)">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img
+            src="https://images.unsplash.com/photo-1604908177527-3e07f403b416"
+            alt="Strogonoff"
+          />
+          <h3>Strogonoff de Frango</h3>
+          <p>Acompanhado de arroz e batata palha</p>
+          <span>R$ 28,00</span>
+          <button onclick="adicionarCarrinho(2)">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img
+            src="https://images.unsplash.com/photo-1604908177526-2d019e5f1d4d"
+            alt="Lasanha"
+          />
+          <h3>Lasanha à Bolonhesa</h3>
+          <p>Massa artesanal e molho caseiro</p>
+          <span>R$ 32,00</span>
+          <button onclick="adicionarCarrinho(3)">Adicionar ao carrinho</button>
         </div>
       </section>
     </main>
 
     <footer>
-      <p>© 2026 Restaurante Sabor Caseiro - Todos os direitos reservados</p>
+      <p>© 2026 Restaurante Sabor Caseiro</p>
     </footer>
+
+    <script>
+      gsap.from(".produto", {
+        opacity: 0,
+        y: 50,
+        duration: 0.8,
+        stagger: 0.2,
+      });
+    </script>
   </body>
 </html>
